--- a/webpack4-demo/package.json
+++ b/webpack4-demo/package.json
@@ -24,5 +24,8 @@
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3",
     "webpack-dev-server": "^3.1.4"
+  },
+  "dependencies": {
+    "axios": "^0.19.0"
   }
 }
